docs-archive/apache-airflow-providers-google/22.2.2/_sources/_api/airflow/providers/google/cloud/transfers/sheets_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.sheets_to_gcs
======================================================

.. py:module:: airflow.providers.google.cloud.transfers.sheets_to_gcs


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.sheets_to_gcs.GoogleSheetsToGCSOperator


Module Contents
---------------

.. py:class:: GoogleSheetsToGCSOperator(*, spreadsheet_id, destination_bucket, sheet_filter = None, destination_path = None, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, return_gcs_uris = False, **kwargs)

   Bases: :py:obj:`airflow.providers.google.version_compat.BaseOperator`


   Writes Google Sheet data into Google Cloud Storage.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GoogleSheetsToGCSOperator`

   :param spreadsheet_id: The Google Sheet ID to interact with.
   :param sheet_filter: Default to None, if provided, Should be an array of the sheet
       titles to pull from.
   :param destination_bucket: The destination Google cloud storage bucket where the
       report should be written to. (templated)
   :param destination_path: The Google cloud storage URI array for the object created by the operator.
       For example: ``path/to/my/files``.
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param return_gcs_uris: If True, returns full GCS URIs (e.g., ``gs://bucket/path/file.csv``).
       If False (default), returns object names only (e.g., ``path/to/file.csv``).
       Default will change to True in a future release.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('spreadsheet_id', 'destination_bucket', 'destination_path', 'sheet_filter', 'impersonation_chain')



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: spreadsheet_id


   .. py:attribute:: sheet_filter
      :value: None



   .. py:attribute:: destination_bucket


   .. py:attribute:: destination_path
      :value: None



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: return_gcs_uris
      :value: False



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



